[project]
name = "scienceon-mcp"
version = "1.0.1"
description = "ScienceON-MCP Server - MCP server for KISTI ScienceON OpenAPI"
readme = "README.md"
license = "CC-BY-NC-4.0"
authors = [
    {name = "raezero", email = "raezero@kisti.re.kr"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.0",
    "httpx>=0.25.0",
    "pycryptodome>=3.19.0",
]
keywords = ["kisti", "scienceon", "mcp", "research", "papers", "patents", "reports"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ansua79/scienceon-mcp"
Repository = "https://github.com/ansua79/scienceon-mcp"
Issues = "https://github.com/ansua79/scienceon-mcp/issues"

[project.scripts]
scienceon-mcp = "scienceon_mcp:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scienceon_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 88
